--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
                         <label class="left-label" contenteditable="true">SpringCloud</label>
                         <progress value="75.78124999999999" max="100"></progress>
-                    <span class="item-remove" style="visibility: visible;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: visible;"><i class="iconfont icon-delete"></i></span></li><li>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: visible;"><i class="iconfont icon-delete"></i></span></li><li>
                         <label class="left-label" contenteditable="true">Python</label>
                         <progress value="70.3125" max="100"></progress>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
@@ -144,7 +144,7 @@
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">枫叶快讯新闻推荐系统</h3>
-                        <p contenteditable="true"><span style="display: inline !important;">此系统是在校期间参与教育局举办的创新创业大赛中的一个赛题，在小队中担任队长选题新闻推荐系统，该系统是大数据领域的推荐系统，通过爬取存储举办单位提供的新闻数据，经过spark提供的机器学习库进行文本分类，再对分类好的新闻数据和用户喜好数据训练推荐个性化推荐模型，针对个人实时推荐新闻，技术架构上面后端SSM框架，采用Hadoop、Hbase存储数据，离线计算使用hive，实时SparkML机器学习库，文本分类采用随机森林，并由其他队员开发android端应用。</span></p>
+                        <p contenteditable="true"><span style="display: inline !important;">此系统是在校期间参与教育局举办的创新创业大赛中的一个赛题，在小队中担任队长选题新闻推荐系统，该系统是大数据领域的推荐系统，通过爬取存储举办单位提供的新闻数据，经过spark提供的机器学习库进行文本分类，再对分类好的新闻数据和用户喜好数据训练推荐个性化推荐模型，针对个人实时推荐新闻，技术架构上面后端SSM框架，采用Hadoop、Hbase存储数据，离线计算使用hive，实时计算使用SparkML机器学习库，文本分类采用随机森林，并由其他队员开发android端web端应用。</span></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                 </ul>
