--- a/index.htm
+++ b/index.htm
@@ -62,10 +62,13 @@
                 <li>
                         <label class="left-label" contenteditable="true">SpringBoot</label>
                         <progress value="77.34375" max="100"></progress>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                <li>
                         <label class="left-label" contenteditable="true">SpringCloud</label>
-                        <progress value="75.78124999999999" max="100"></progress>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: visible;"><i class="iconfont icon-delete"></i></span></li><li>
+                        <progress value="75.34375" max="100"></progress>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+
+                    <li>
                         <label class="left-label" contenteditable="true">Python</label>
                         <progress value="70.3125" max="100"></progress>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
@@ -109,7 +112,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">浙江工业大学之江学院 - 软件工程（本科）2015-2019</h3>
-                        <p contenteditable="true"><span style="background-color: rgb(255, 255, 255); display: inline !important;">主修Web前/后端开发、统计与概率论、机器学习、高级数据库系统、数据可视化、云计算技术、人工智能、图像识别、</span><span style="background-color: rgb(255, 255, 255); display: inline !important;">大数据技术导论、数据采集与处理实践、</span><span style="background-color: rgb(255, 255, 255); display: inline !important;">媒体大数据案例分析、网络安全、计算机网络、数据结构、软件工程、操作系统等课程，以及大数据方向系列实验，并完成Java程序设计、数据分析、机器学习、数据可视化、大数据综合应用实践、专业实训和毕业设计等多种实践环节</span></p>
+                        <p contenteditable="true"><span style="background-color: rgb(255, 255, 255); display: inline !important;">主修Web前/后端开发、统计与概率论、机器学习、高级数据库系统、数据可视化、云计算技术、人工智能、图像识别、大数据技术导论、数据采集与处理实践、媒体大数据案例分析、网络安全、计算机网络、数据结构、软件工程、操作系统等课程，以及大数据方向系列实验，并完成Java程序设计、数据分析、机器学习、数据可视化、大数据综合应用实践、专业实训和毕业设计等多种实践环节</span></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
@@ -136,7 +139,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">FEECIEL费茜耶微信小程序</h3>
-                        <p contenteditable="true">该小程序是B2C类型的电商系统，主营女装，分为购物子系统、支付子系统、客服子系统、后台子系统、库存子系统、物流子系统和财务子系统。<span style="display: inline !important;">核心架构采用了SpringCloud微服务架构，整合了上述若干子系统。技术栈包括了SpringBoot、SpringDataJpa、SpringSecurity、RabbitMQ、<span style="display: inline !important;">ElasticSearch</span>、QuartZ、<span style="display: inline !important;">Swagger、Flyway</span><span style="display: inline !important;">、Docker、</span>Git-Hook、python、Selenium、Echart、Vue、Zookeeper，数据库选择的是PostgreSQL，NoSQL采用的是Redis。</span></p>
+                        <p contenteditable="true">该小程序是B2C类型的电商系统，主营女装，分为购物子系统、支付子系统、客服子系统、后台子系统、库存子系统、物流子系统和财务子系统。核心架构采用了SpringCloud微服务架构，整合了上述若干子系统。技术栈包括了SpringBoot、SpringDataJpa、SpringSecurity、RabbitMQ、ElasticSearch、QuartZ、Swagger、Flyway、Docker、Git-Hook、python、Selenium、Echart、Vue、Zookeeper，数据库选择的是PostgreSQL，NoSQL采用的是Redis。</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">中铁三局梁场后台管理系统</h3>
@@ -154,7 +157,7 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title" contenteditable="true">自我评价</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <p contenteditable="true">
-                    本人性格开朗、稳重、有活力，待人热情、真诚；<span style="display: inline !important;">对待工作认真负责，善于沟通、协调有较强的组织能力与团队精神；上进心强、勤于学习能不断提高自身的能力与综合素质。在未来的工作中，我将以充沛的精力，刻苦钻研的精神来努力工作，稳定地提高自己的工作能力，与企业同步发展。</span></p>
+                    本人性格开朗、稳重、有活力，待人热情、真诚；对待工作认真负责，善于沟通、协调有较强的组织能力与团队精神；上进心强、勤于学习能不断提高自身的能力与综合素质。在未来的工作中，我将以充沛的精力，刻苦钻研的精神来努力工作，稳定地提高自己的工作能力，与企业同步发展。</span></p>
 				<br>
 				<br>
             </div>
