--- a/index.htm
+++ b/index.htm
@@ -139,15 +139,15 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">FEECIEL费茜耶微信小程序</h3>
-                        <p contenteditable="true">该小程序是B2C类型的电商系统，主营女装，分为购物子系统、支付子系统、客服子系统、后台子系统、库存子系统、物流子系统和财务子系统。核心架构采用了SpringCloud微服务架构，整合了上述若干子系统。技术栈包括了SpringBoot、SpringDataJpa、SpringSecurity、RabbitMQ、ElasticSearch、QuartZ、Swagger、Flyway、Docker、Git-Hook、python、Selenium、Echart、Vue、Zookeeper，数据库选择的是PostgreSQL，NoSQL采用的是Redis。</p>
+                        <p contenteditable="true">该小程序是B2C类型的电商系统，主营女装，分为商品模块、订单模块、库存模块、会员模块、购物车模块、支付模块和物流模块等。核心架构采用了SpringCloud微服务架构，整合了上述若干子系统。技术栈包括了SpringBoot、SpringCloud、SpringDataJpa、SpringSecurity、RabbitMQ、ElasticSearch、QuartZ、Swagger、Flyway、Docker、Git-Hook、python、Selenium、Echart、Vue、Zookeeper，数据库选择的是PostgreSQL，NoSQL采用的是Redis。</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">中铁三局梁场后台管理系统</h3>
-                        <p contenteditable="true">该系统是给杭州中铁三局的制梁场开发的后台管理系统，主要是对制梁厂里的制梁流程监控管理，人员考勤管理和材料库存、试验记录。我主要负责的是制梁流程的通知单管理、人员健康档案、材料出入库的记录，采购计划管理，实验室试验记录，需求采购计划管理。主要是负责编写java后端的接口，前端的业务逻辑也有参与，除了css样式外，主要使用jQuery编写逻辑，Bootstrap编写数据表格等。技术架构上面后端项目选择的SpringBoot、SpringMVC和MyBatis组成的SSM框架，并且融合了Swagger、SpringSecurity、Redis、MySQL、阿里云等技术。前端项目采用了jQuery+Bootstrap技术架构，前后端分离。</span></p>
+                        <p contenteditable="true">该系统是给杭州中铁三局的制梁场开发的后台管理系统，主要是对制梁厂里的制梁流程监控管理，人员考勤管理和材料库存、试验记录。我主要负责的是制梁流程的通知单管理、人员健康档案、材料出入库的记录，采购计划管理，实验室试验记录，需求采购计划管理。主要是负责编写java后端的接口，前端的业务逻辑也有参与，除了css样式外，主要使用jQuery编写逻辑，Bootstrap编写数据表格等。技术架构上面后端项目选择的SpringBoot、SpringMVC和MyBatis组成的SSM框架，并且融合了Swagger、SpringSecurity、Redis、MySQL等技术。前端项目采用了jQuery+Bootstrap技术架构，前后端分离。</span></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">枫叶快讯新闻推荐系统</h3>
-                        <p contenteditable="true"><span style="display: inline !important;">此系统是在校期间参与教育局举办的创新创业大赛中的一个赛题，在小队中担任队长选题新闻推荐系统，该系统是大数据领域的推荐系统，通过爬取存储举办单位提供的新闻数据，经过spark提供的机器学习库进行文本分类，再对分类好的新闻数据和用户喜好数据训练推荐个性化推荐模型，针对个人实时推荐新闻，技术架构上面后端SSM框架，采用Hadoop、Hbase存储数据，离线计算使用hive，实时计算使用SparkML机器学习库，文本分类采用随机森林，并由其他队员开发android端web端应用。</span></p>
+                        <p contenteditable="true"><span style="display: inline !important;">此系统是在校期间参与教育局举办的创新创业大赛中的一个赛题，在小队中担任队长选题新闻推荐系统，该系统是大数据领域的推荐系统，通过爬取存储举办单位提供的新闻数据，经过spark提供的机器学习库进行文本分类，再对分类好的新闻数据和用户喜好数据训练推荐个性化推荐模型，针对个人实时推荐新闻，技术架构上面后端SSM框架，采用Hadoop存储数据，hive做离线计算，SparkStream做实时计算，文本分类采用随机森林算法，推荐算法采用SparkML中的协同过滤，并由其他队员开发android、web前端应用。</span></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                 </ul>
