--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
                         <label class="left-label" contenteditable="true">前端</label><span class="label-value" contenteditable="true">jQuery、Bootstrap、css、Html、JavaScript</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
-                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Java、Python、Redis、Swagger<span style="display: inline !important;">、Scrapy、hive</span><br>MySQL、Hadoop、Spark</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Java、Spring、Redis、mongdb、<span style="display: inline !important;">ElasticSearch、RabbitMQ</span><br>Hadoop、Spark</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
                         <label class="left-label" contenteditable="true">其它</label><span class="label-value" contenteditable="true">Docker、Linux运维</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
