--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
                         <label class="left-label" contenteditable="true">前端</label><span class="label-value" contenteditable="true">jQuery、Bootstrap、css、Html、JavaScript</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
-                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Java、Spring、Redis、MongoDB、<span style="display: inline !important;">ElasticSearch、RabbitMQ</span><br>Hadoop、Spark</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">后端</label><span class="label-value" contenteditable="true">Java、Spring、Redis、<span style="display: inline !important;">ElasticSearch、RabbitMQ</span><br>Hadoop、Spark</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
                         <label class="left-label" contenteditable="true">其它</label><span class="label-value" contenteditable="true">Docker、Linux运维</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
@@ -122,7 +122,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">精典互联（嘉兴）科技公司－Java后端工程师（2019年7月-至今）</h3>
-                        <p contenteditable="true">参与开发了FEECIEL费茜耶微信小程序，担任后端工程师角色。主要的工作是负责购物车、商品秒杀、库存、订单等模块的开发与维护，并且负责管理该项目的云端运维工作</p>
+                        <p contenteditable="true">参与开发了FEECIEL费茜耶微信小程序，担任后端工程师角色。主要的工作是负责购物车、商品秒杀、库存、订单、支付、评价等模块的开发与维护，并且负责管理该项目的云端运维工作</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">杭州道霆科技有限公司－实习生（2018年7月-2019年3月）</h3>
