--- a/index.htm
+++ b/index.htm
@@ -121,17 +121,18 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">精典互联（嘉兴）科技公司－Java后端工程师（2019年7月-至今）</h3>
+                        <h3 contenteditable="true">车友部落（嘉兴）科技有限公司－Java后端工程师（2020年7月-至今）</h3>
+                        <p contenteditable="true">参与开发车主惠app，主要负责电影票模块，商家商城模块。</p>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <li>
+                        <h3 contenteditable="true">精典互联（嘉兴）科技公司－Java后端工程师（2019年7月-2020年7月）</h3>
                         <p contenteditable="true">参与开发了FEECIEL费茜耶微信小程序，担任后端工程师角色。主要的工作是负责购物车、商品秒杀、库存、订单、支付、评价等模块的开发与维护，并且负责管理该项目的云端运维工作</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">杭州道霆科技有限公司－实习生（2018年7月-2019年3月）</h3>
                         <p contenteditable="true">参与了中铁三局梁场后台管理系统的开发和测试，维护腾讯云在线文档的API接口调用，实现数据导出excel功能，制梁流程、考勤系统、人员信息、库存管理等模块的开发，并且编写后台前端页面与js逻辑。</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
-                <li>
-                        <h3 contenteditable="true">浙江工业大学之江学院GiveMe团队－队长（2017年12月-2018年6月）</h3>
-                        <p contenteditable="true">大学生创新创业大赛，参与开发了枫叶快讯新闻推荐系统，担任小队队长。主要的工作是负责后端开发，新闻爬虫、数据清洗、模型训练、系统部署。</p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li></ul>
+                </ul>
             </div>
             <div class="project info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title" contenteditable="true">项目经历</span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
